[package]
name = "todo"
version = "0.1.0"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2018"
build = "build.rs"
publish = false
license = "GPL-3.0-only"

[[bin]]
path = "main.rs"
name = "todo"

[dependencies]
sixtyfps = { path = "../../../api/sixtyfps-rs" }
pin-weak = "1"

[build-dependencies]
sixtyfps-build = { path = "../../../api/sixtyfps-rs/sixtyfps-build" }
